samples/_failures_safe/1761643158_330a37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21954335.c: In function ‘print_compression_type’:
./samples/SAFE/__tmp_21954335.c:157:9: error: expected ‘:’ or ‘...’ at end of input
  157 |         case COMP_HUFFMAN
      |         ^~~~
./samples/SAFE/__tmp_21954335.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_21954335.c:157:9: error: expected declaration or statement at end of input
